@@ -1,6 +1,8 @@
 Revision history for Dancer2-Session-Sereal
 
 {{$NEXT}}
+    [ IMPROVEMENT ]
+    - Add 'encoder_args' and 'decoder_args' configuration options. (GH#3)
 
     - Convert tests from Test::TCP to Plack::Test
     - Minimum Dancer2 release is now 0.150000
